--- a/index.html
+++ b/index.html
@@ -12,67 +12,71 @@
             --accent-pink: #FF2D78;
         }
 
-        /* 커서 숨김 및 기본 설정 */
+        /* 기본 설정 및 커서 숨김 */
         * { margin: 0; padding: 0; box-sizing: border-box; cursor: none !important; }
         body { background-color: var(--bg-black); color: white; font-family: 'Noto Sans KR', sans-serif; line-height: 1.6; overflow-x: hidden; }
 
-        /* 1. 강화된 VCR 노이즈 효과 */
-        .vcr-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: transparent; pointer-events: none; z-index: 9998;
+        /* --- 1. 배경 전용 Grain 노이즈 효과 --- */
+        .hero {
+            position: relative;
+            height: 100vh; display: flex; flex-direction: column; justify-content: center; padding: 0 10%;
+            background: linear-gradient(to right, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.2)), url('./1.jpg') no-repeat center center;
+            background-size: cover;
+            overflow: hidden;
         }
-        .vcr-overlay::before {
-            content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+
+        /* 배경 이미지 바로 위에만 노이즈 적용 */
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: -100%; left: -100%; width: 300%; height: 300%;
             background: url('https://upload.wikimedia.org/wikipedia/commons/7/76/1k_Resolution_White_Noise.png');
-            opacity: 0.12; /* 노이즈 강도 대폭 상향 */
-            animation: noise-anim 0.2s infinite;
-        }
-        .vcr-overlay::after {
-            content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), 
-                        linear-gradient(90deg, rgba(255, 0, 0, 0.04), rgba(0, 255, 0, 0.02), rgba(0, 255, 0, 0.04));
-            background-size: 100% 3px, 3px 100%;
+            opacity: 0.15; /* Grain 강도 */
+            animation: grain-jump 8s steps(10) infinite;
+            pointer-events: none;
+            z-index: 1; /* 글씨보다 뒤, 배경보다는 앞 */
         }
 
-        @keyframes noise-anim {
-            0% { transform: translate(0,0); }
-            10% { transform: translate(-1%,-1%); }
-            20% { transform: translate(-2%,1%); }
-            100% { transform: translate(1%,0); }
+        /* 글씨가 노이즈 위로 오도록 설정 */
+        .hero-content {
+            position: relative;
+            z-index: 10;
         }
 
-        /* 2. 작은 커서 및 잔상 효과 */
+        @keyframes grain-jump {
+            0%, 100% { transform: translate(0, 0); }
+            10% { transform: translate(-5%, -10%); }
+            30% { transform: translate(3%, -15%); }
+            50% { transform: translate(12%, 9%); }
+            70% { transform: translate(-9%, 4%); }
+            90% { transform: translate(2%, 11%); }
+        }
+
+        /* --- 2. 작은 커서 및 잔상 효과 --- */
         .cursor-dot {
-            position: fixed; width: 8px; height: 8px;
+            position: fixed; width: 6px; height: 6px;
             background: var(--neon-yellow); border-radius: 50%;
             pointer-events: none; transform: translate(-50%, -50%);
             z-index: 9999; box-shadow: 0 0 10px var(--neon-yellow);
         }
         .cursor-trail {
-            position: fixed; width: 6px; height: 6px;
-            background: rgba(255, 234, 0, 0.4); border-radius: 50%;
+            position: fixed; width: 4px; height: 4px;
+            background: rgba(255, 234, 0, 0.3); border-radius: 50%;
             pointer-events: none; transform: translate(-50%, -50%);
-            z-index: 9998; transition: transform 0.12s ease-out;
+            z-index: 9998; transition: transform 0.1s ease-out;
         }
 
-        /* 레이아웃 & 텍스트 스타일 */
+        /* 공통 스타일 */
         .neon-text { color: var(--neon-yellow); text-shadow: 0 0 10px rgba(255, 234, 0, 0.7); font-weight: 900; }
         header { position: fixed; top: 0; width: 100%; padding: 20px 5%; display: flex; justify-content: space-between; align-items: center; background: rgba(0,0,0,0.8); z-index: 1000; }
         
-        .hero {
-            height: 100vh; display: flex; flex-direction: column; justify-content: center; padding: 0 10%;
-            background: linear-gradient(to right, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.2)), url('./1.jpg') no-repeat center center;
-            background-size: cover;
-        }
-        .hero h1 { font-size: clamp(2.5rem, 6vw, 4rem); line-height: 1.1; margin-bottom: 20px; }
-
         section { padding: 100px 10%; border-bottom: 1px solid #111; }
         .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; }
         .section-title { font-size: 2.5rem; margin-top: 10px; margin-bottom: 5px; }
         .section-desc { font-size: 0.8rem; color: #888; margin-bottom: 35px; }
         .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; line-height: 2.2; }
 
-        /* 3. 카세트 BGM 플레이어 UI */
+        /* BGM 플레이어 UI */
         #bgm-container {
             position: fixed; bottom: 30px; right: 30px; z-index: 1001;
             background: #111; border: 2px solid var(--neon-yellow);
@@ -83,7 +87,20 @@
         .playing .tape-icon { display: inline-block; animation: spin 2s linear infinite; }
         @keyframes spin { 100% { transform: rotate(360deg); } }
 
-        /* 비디오 그리드 */
+        .equipment-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
+        .eq-item { background: #0d0d0d; padding: 20px; border: 1px solid #222; display: flex; justify-content: space-between; align-items: center; transition: all 0.4s ease; opacity: 0.4; filter: grayscale(100%); }
+        .eq-item:hover { opacity: 1; filter: grayscale(0%); transform: translateY(-5px); border-color: rgba(255, 255, 255, 0.2); }
+        .eq-item.pr, .eq-item.ae { border-left: 4px solid #312963; }
+        .eq-item.ps { border-left: 4px solid #31a8ff; }
+        .eq-item.ai, .eq-item.bl { border-left: 4px solid #ff9a00; }
+        .eq-item.id { border-left: 4px solid #ff3366; }
+        .eq-name { font-weight: bold; }
+        .rent-tag { font-size: 0.6rem; color: #555; }
+
+        .filter-group { display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 25px; }
+        .filter-btn { background: none; border: 1px solid #333; color: white; padding: 8px 18px; font-size: 0.8rem; transition: 0.3s; font-weight: 700; }
+        .filter-btn.active { background: var(--neon-yellow); color: black; border-color: var(--neon-yellow); }
+
         .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; }
         .video-card { background: #0a0a0a; border: 1px solid #222; border-radius: 8px; overflow: hidden; position: relative; transition: 0.4s; }
         .video-card.hide { display: none; }
@@ -92,7 +109,6 @@
         .video-tag { position: absolute; top: 10px; left: 10px; background: var(--neon-yellow); color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5; }
         .video-info { padding: 15px; font-size: 0.9rem; font-weight: bold; }
 
-        /* 캐릭터 카드 */
         .centered-section { text-align: center; }
         .char-grid { display: flex; gap: 30px; flex-wrap: wrap; justify-content: center; }
         .flip-card { width: 320px; height: 480px; perspective: 1000px; text-align: left; }
@@ -110,7 +126,6 @@
 </head>
 <body>
 
-    <div class="vcr-overlay"></div>
     <div id="cursor-dot" class="cursor-dot"></div>
     <div id="cursor-trail" class="cursor-trail"></div>
 
@@ -118,9 +133,9 @@
         <span class="tape-icon">📼</span>
         <span id="bgm-text" style="font-size: 0.8rem; font-weight: bold;">BGM OFF</span>
         <div id="controls" style="display: flex; gap: 5px; margin-left: 10px;">
-            <button onclick="playPrev()" style="background:none; border:none; color:white; font-size: 0.7rem;">◀</button>
-            <button id="play-btn" onclick="toggleBGM()" style="background:none; border:none; color:white; font-size: 0.7rem;">PLAY</button>
-            <button onclick="playNext()" style="background:none; border:none; color:white; font-size: 0.7rem;">▶</button>
+            <button onclick="playPrev()" style="background:none; border:none; color:white; font-size: 0.7rem; cursor: none;">◀</button>
+            <button id="play-btn" onclick="toggleBGM()" style="background:none; border:none; color:white; font-size: 0.7rem; cursor: none;">PLAY</button>
+            <button onclick="playNext()" style="background:none; border:none; color:white; font-size: 0.7rem; cursor: none;">▶</button>
         </div>
         <audio id="main-audio"></audio>
     </div>
@@ -133,8 +148,10 @@
     </header>
 
     <section class="hero">
-        <h1 class="neon-text">지금 가장 보고 싶은<br>영상을 대여해 드립니다.</h1>
-        <p style="opacity: 0.7;">Curated videos & characters by GeunRyeong</p>
+        <div class="hero-content">
+            <h1 class="neon-text">지금 가장 보고 싶은<br>영상을 대여해 드립니다.</h1>
+            <p style="opacity: 0.7;">Curated videos & characters by GeunRyeong</p>
+        </div>
     </section>
 
     <section id="about">
@@ -147,6 +164,18 @@
             나아가 영상뿐만 아니라 조금 더 넓은 범위의 작업도 하고 있습니다.
             이곳은 그 기록을 모아둔 공간입니다.
         </div>
+
+        <span class="label">EQUIPMENT RENTAL</span>
+        <h2 class="neon-text section-title">장비 목록</h2>
+        <div class="section-desc">비디오를 만들기 위해 항상 대여 가능한 장비 목록</div>
+        <div class="equipment-grid">
+            <div class="eq-item pr"><span class="eq-name">Premiere Pro</span><span class="rent-tag">RENT</span></div>
+            <div class="eq-item ae"><span class="eq-name">After Effects</span><span class="rent-tag">RENT</span></div>
+            <div class="eq-item ps"><span class="eq-name">Photoshop</span><span class="rent-tag">RENT</span></div>
+            <div class="eq-item ai"><span class="eq-name">Illustrator</span><span class="rent-tag">RENT</span></div>
+            <div class="eq-item bl"><span class="eq-name">Blender</span><span class="rent-tag">RENT</span></div>
+            <div class="eq-item id"><span class="eq-name">InDesign</span><span class="rent-tag">RENT</span></div>
+        </div>
     </section>
 
     <section id="new">
@@ -156,6 +185,36 @@
         <div class="video-grid">
             <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div><div class="video-info">Product Video</div></div>
             <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe></div><div class="video-info">AI Animation Film</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div><div class="video-info">WEBDRAMA</div></div>
+        </div>
+    </section>
+
+    <section id="genres">
+        <span class="label">GENRES</span>
+        <h2 class="neon-text section-title">장르별 영상</h2>
+        <div class="section-desc">원하시는 장르의 테이프를 골라보세요.</div>
+        <div class="filter-group">
+            <button class="filter-btn active" data-filter="all">ALL</button>
+            <button class="filter-btn" data-filter="ANIMATION">ANIMATION</button>
+            <button class="filter-btn" data-filter="SHORTS">SHORTS</button>
+            <button class="filter-btn" data-filter="WEBDRAMA">WEBDRAMA</button>
+            <button class="filter-btn" data-filter="MEDIA ART">MEDIA ART</button>
+            <button class="filter-btn" data-filter="AD">AD</button>
+            <button class="filter-btn" data-filter="PODCAST">PODCAST</button>
+        </div>
+        <div class="video-grid" id="filtered-grid">
+            <div class="video-card" data-category="MEDIA ART"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/vCSrwtncK0Y"></iframe></div><div class="video-info">Media Art</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/tR-zDeqXqO4"></iframe></div><div class="video-info">Podcast Ep.1</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/DVWGfjU2-Jw"></iframe></div><div class="video-info">Podcast Ep.2</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/6cFyGEuheX0"></iframe></div><div class="video-info">Podcast Ep.3</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/4XuNehNNy0o"></iframe></div><div class="video-info">Podcast Ep.4</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/prne2fJYE7I"></iframe></div><div class="video-info">Podcast Ep.5</div></div>
+            <div class="video-card" data-category="PODCAST"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/faz2WUjPSdo"></iframe></div><div class="video-info">Podcast Ep.6</div></div>
+            <div class="video-card" data-category="ANIMATION"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4"></iframe></div><div class="video-info">AI Animation Film</div></div>
+            <div class="video-card" data-category="SHORTS"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4"></iframe></div><div class="video-info">3D Animation</div></div>
+            <div class="video-card" data-category="WEBDRAMA"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ"></iframe></div><div class="video-info">Web Drama</div></div>
+            <div class="video-card" data-category="AD"><div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY"></iframe></div><div class="video-info">Product Video</div></div>
         </div>
     </section>
 
@@ -183,7 +242,6 @@
                 </div>
             </div>
         </div>
-        <div style="font-size: 0.7rem; color: #555; margin-top: 40px;">* 모든 캐릭터는 오리지널 창작물입니다 *</div>
     </section>
 
     <div class="receipt-container">
@@ -200,7 +258,7 @@
     </div>
 
     <script>
-        // 커서 및 잔상 로직
+        // 커서 로직
         const dot = document.getElementById('cursor-dot');
         const trail = document.getElementById('cursor-trail');
         document.addEventListener('mousemove', e => {
@@ -209,17 +267,13 @@
             setTimeout(() => {
                 trail.style.left = e.clientX + 'px';
                 trail.style.top = e.clientY + 'px';
-            }, 100);
+            }, 60);
         });
 
-        // 찰칵 효과음 함수
         const clickSound = document.getElementById('click-sound');
         function playClick() { clickSound.currentTime = 0; clickSound.play(); }
-
-        // 카드 뒤집기 + 효과음
         function flipChar(el) { playClick(); el.classList.toggle('is-flipped'); }
 
-        // BGM 플레이리스트 (수정된 파일명 기준)
         const playlist = ["bgm1.mp3", "bgm2.mp3", "bgm3.mp3", "bgm4.mp3"];
         let currentTrack = 0;
         const mainAudio = document.getElementById('main-audio');
@@ -227,10 +281,7 @@
         const bgmText = document.getElementById('bgm-text');
         const playBtn = document.getElementById('play-btn');
 
-        function loadTrack(index) {
-            mainAudio.src = playlist[index];
-            mainAudio.load();
-        }
+        function loadTrack(index) { mainAudio.src = playlist[index]; mainAudio.load(); }
         loadTrack(currentTrack);
 
         function toggleBGM() {
@@ -240,9 +291,6 @@
                     bgmContainer.classList.add('playing');
                     bgmText.innerText = "BGM ON";
                     playBtn.innerText = "PAUSE";
-                }).catch(e => {
-                    console.error("파일 로딩 실패. 파일명을 다시 확인해주세요.");
-                    alert("음악 파일을 찾을 수 없습니다. 저장소 파일명을 bgm1, bgm2... 로 수정하셨나요?");
                 });
             } else {
                 mainAudio.pause();
@@ -252,21 +300,24 @@
             }
         }
 
-        function playNext() {
-            playClick();
-            currentTrack = (currentTrack + 1) % playlist.length;
-            loadTrack(currentTrack);
-            mainAudio.play();
-        }
-
-        function playPrev() {
-            playClick();
-            currentTrack = (currentTrack - 1 + playlist.length) % playlist.length;
-            loadTrack(currentTrack);
-            mainAudio.play();
-        }
-
+        function playNext() { playClick(); currentTrack = (currentTrack + 1) % playlist.length; loadTrack(currentTrack); mainAudio.play(); }
+        function playPrev() { playClick(); currentTrack = (currentTrack - 1 + playlist.length) % playlist.length; loadTrack(currentTrack); mainAudio.play(); }
         mainAudio.onended = playNext;
+
+        const buttons = document.querySelectorAll('.filter-btn');
+        const cards = document.querySelectorAll('#filtered-grid .video-card');
+        buttons.forEach(button => {
+            button.addEventListener('click', () => {
+                playClick();
+                buttons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+                const filter = button.getAttribute('data-filter');
+                cards.forEach(card => {
+                    if (filter === 'all' || card.getAttribute('data-category') === filter) card.classList.remove('hide');
+                    else card.classList.add('hide');
+                });
+            });
+        });
     </script>
 </body>
 </html>
